// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 bp bq br bs be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b3 b1 c0 c1"
        src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
      />
      <div
        className="c2 c3 c4 c5"
      >
        <h1
          className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
        >
          July 26
        </h1>
        <div
          className="ch ci ax cj ck cl"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Deck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="cm cn co cp"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ul
        className="cq cr cs cm ct cu cv cw cx cy cz"
      >
        <li
          className="d0 d1"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d0 d1"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d0 d1"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d0 d1"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d0 d1"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d0 d1"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
        <li
          className="d0 d1"
        >
          <div
            className="bt bu bv bw b3 b1 b4 b2 bx ap by bz"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c0 c1"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c2 c3 c4 c5"
            >
              <h1
                className="ax bn az bo c6 at au av c7 c8 c9 ca cb cc cd ce cf cg"
              >
                July 26
              </h1>
              <div
                className="ch ci ax cj ck cl"
              />
            </div>
          </div>
        </li>
      </ul>
      <button
        className="d2 d3 d4 ap d5 d6 d7 d8 d9 da db dc dd de"
        onClick={[Function]}
      >
        &lt;
      </button>
      <button
        className="d2 d3 d4 ap d5 d6 d7 d8 d9 da db dc dd df"
        onClick={[Function]}
      >
        &gt;
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ax cj ck cl b9 cu cm"
      data-baseweb="input"
    >
      <div
        className="d1 cu cm dg bu dh an ao b3 b4 b1 b2 ax cj ck cl b9 di bj"
        data-baseweb="base-input"
      >
        <div
          className="cu af b7"
        >
          <svg
            className="dj dk dl dm dn"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d1 ba ah ai ak cm c1 do dp b5 b6 dq dr ax cj ck cl b9 ds dt"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax ay ck b0 b9 cu cm"
      data-baseweb="input"
    >
      <div
        className="d1 cu cm dg bu dh an ao b3 b4 b1 b2 ax ay ck b0 b9 di bj"
        data-baseweb="base-input"
      >
        <div
          className="cu af b7"
        >
          <svg
            className="dj dk dl dm dn"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d1 ba ah ai ak cm c1 do dp du dv dw dx ax ay ck b0 b9 ds dt"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax d9 ck bo b9 cu cm"
      data-baseweb="input"
    >
      <div
        className="d1 cu cm dg bu dh an ao b3 b4 b1 b2 ax d9 ck bo b9 di bj"
        data-baseweb="base-input"
      >
        <div
          className="cu af b7"
        >
          <svg
            className="dj dk dl dm dn"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d1 ba ah ai ak cm c1 do dp bp bq dy dz ax d9 ck bo b9 ds dt"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;
